# identifile

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.MD  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/api/: errors.py  identify.py  response.py  version.py
tests/: __init__.py  conftest.py  test_api.py  test_errors.py  test_response.py  test_version.py
